--- a/public/checkout.html
+++ b/public/checkout.html
@@ -224,7 +224,7 @@ fetch("https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/server", {
   body: JSON.stringify(purchase)
 })
   .then(function(result) {
-    console.log("result.json(): ", result.json());
+    //console.log("result.json(): ", result.json());
     return result.json();
   })
   .then(function(data) {
