--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -753,7 +753,7 @@ fetch("https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/server", {
   body: JSON.stringify(purchase)
 })
   .then(function(result) {
-    console.log(result.json());
+    //console.log(result.json());
     return result.json();
   })
   .then(function(data) {
