--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -507,8 +507,20 @@ function displayPayment(){
   form = `
 
     <form id="payment-form">
-      
-      <div id="card-element"></div>
+
+
+
+<div class="form-row">
+<div class="col-md-6 form-group">
+<div id="card-element"></div>
+</div>
+</div>
+
+
+
+
+
+
       <button id="payment-form-submit">
         <div class="spinner hidden" id="spinner"></div>
         <span id="payment-form-button-text">Pay Now</span>
