--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -763,41 +764,132 @@ for (i = 0; i < len; i++) {
 console.log("totalCount,  totalCart: ", totalCount, totalCart);
 
 
+// Disable the button until we have Stripe set up on the page
+document.querySelector(".stripe-button").disabled = true;
 
-$.ajax({
-    type: 'POST',
-    url: 'https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/server',
-    crossDomain: true,
-    data: cart,
-    dataType: 'json',
-    beforeSend: function (xhr) {
 
-        xhr.setRequestHeader('Accept', 'application/json');
 
-    },
-    success: function(responseData, textStatus, jqXHR) {
-        
-        alert("Success: ", responseData, textStatus, jqXHR);
-        
-        console.log("Success: ", responseData, textStatus, jqXHR);
+fetch("https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/server", {
 
-    },
-    error: function (xhr, textStatus, errorThrown) {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify(purchase)
+})
+  .then(function(result) {
+    //console.log(result.json());
+    return result.json();
+  })
+  .then(function(data) {
 
-        alert("Error: ", xhr.responseText , textStatus, errorThrown, xhr);
+    var elements = stripe.elements();
 
-        console.log("Error: ", xhr.responseText , textStatus, errorThrown, xhr);
+    var style = {
+      base: {
+        color: "#32325d",
+        fontFamily: 'Arial, sans-serif',
+        fontSmoothing: "antialiased",
+        fontSize: "16px",
+        "::placeholder": {
+          color: "#32325d"
+        }
+      },
+      invalid: {
+        fontFamily: 'Arial, sans-serif',
+        color: "#fa755a",
+        iconColor: "#fa755a"
+      }
+    };
 
-    },
-    complete: function (responseData, textStatus) {
+    var card = elements.create("card", { style: style });
+    // Stripe injects an iframe into the DOM
+    card.mount("#card-element");
 
-        alert(responseData, textStatus);
+    card.on("change", function (event) {
+      // Disable the Pay button if there are no card details in the Element
+      document.querySelector(".stripe-button").disabled = event.empty;
+      document.querySelector("#payment-form-card-error").textContent = event.error ? event.error.message : "";
+    });
 
-        console.log("Complete: ", responseData, textStatus);
+    var form = document.getElementById("payment-form");
+    form.addEventListener("submit", function(event) {
+      event.preventDefault();
+      // Complete payment when the submit button is clicked
+      payWithCard(stripe, card, data.clientSecret);
+    });
+  });
 
-    },
 
-});
+
+// Calls stripe.confirmCardPayment
+// If the card requires authentication Stripe shows a pop-up modal to
+// prompt the user to enter authentication details without leaving your page.
+var payWithCard = function(stripe, card, clientSecret) {
+  loading(true);
+  stripe
+    .confirmCardPayment(clientSecret, {
+      receipt_email: address.email,
+      payment_method: {
+        card: card
+      }
+    })
+    .then(function(result) {
+      if (result.error) {
+        // Show error to your customer
+        showError(result.error.message);
+      } else {
+        // The payment succeeded!
+        orderComplete(result.paymentIntent.id);
+      }
+    });
+};
+
+
+
+/* ------- UI helpers ------- */
+
+// Shows a success message when the payment is complete
+var orderComplete = function(paymentIntentId) {
+  loading(false);
+  document
+    .querySelector(".result-message a")
+    .setAttribute(
+      "href",
+      "https://dashboard.stripe.com/test/payments/" + paymentIntentId
+    );
+  document.querySelector(".result-message").classList.remove("hidden");
+  document.querySelector(".stripe-button").disabled = true;
+};
+
+
+
+// Show the customer the error from Stripe if their card fails to charge
+var showError = function(errorMsgText) {
+  loading(false);
+  var errorMsg = document.querySelector("#payment-form-card-error");
+  errorMsg.textContent = errorMsgText;
+  setTimeout(function() {
+    errorMsg.textContent = "";
+  }, 4000);
+};
+
+
+
+// Show a spinner on payment submission
+var loading = function(isLoading) {
+  if (isLoading) {
+    // Disable the button and show a spinner
+    document.querySelector(".stripe-button").disabled = true;
+    document.querySelector("#payment-form-spinner").classList.remove("hidden");
+    document.querySelector("#payment-form-button-text").classList.add("hidden");
+  } else {
+    document.querySelector(".stripe-button").disabled = false;
+    document.querySelector("#payment-form-spinner").classList.add("hidden");
+    document.querySelector("#payment-form-button-text").classList.remove("hidden");
+  }
+};
+
 
 
 }
@@ -805,6 +897,7 @@ $.ajax({
 
 
 </script>
+
 
 </body>
 </html>
