--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -180,20 +180,52 @@ body {
 <div class="modal" id="stripe-result-modal" tabindex="-1" role="dialog" aria-labelledby="stripe-result-modal" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="#stripe-result-modal-long-title">Result</h5>
-      </div>
+
+
+
+<div class="modal-header">
+      <h5 class="modal-title" id="#stripe-result-modal-long-title">Result</h5>
+</div>
+
+
+
+<div class="modal-body">
 
       <div class="stripe-result-modal-body">
+
       </div>
 
+</div>
+
+
+
+<div class="modal-footer">
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#stripe-result-modal" data-show="false">
         Close
       </button>
-      
+</div>
+
+
+
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -878,7 +910,7 @@ var payWithCard = function(stripe, card, clientSecret) {
         // The payment succeeded!
         console.log("The payment succeeded!");
         closeCart();
-        DisplayPaymentResult( result.paymentIntent.id, true);
+        DisplayPaymentResult( result.paymentIntent.id, false);
         orderComplete(result.paymentIntent.id, false);
       }
     });
