--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -928,7 +928,7 @@ if (error){
 }
 else
 {
-  link = "https://dashboard.stripe.com/test/payments/" + paymentIntentId;
+  link = "https://dashboard.stripe.com/test/payments/" + message;
   res += `Payment successful.<br>Link: <a href="+link+" class="btn btn-primary">Payment Id</a>`
 }
 
