--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -929,7 +929,7 @@ if (error){
 else
 {
   linkv = "https://dashboard.stripe.com/test/payments/" + message;
-  res += 'Payment successful.<br>Payment Id: &nbsp; &nbsp; <a href="' + linkv + '">' + linkv + '</a>';
+  res += 'Payment successful.<br>Payment Id: &nbsp; &nbsp; <a href="' + linkv + '">' + message + '</a>';
 }
 
 res += "<p>";
