--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -929,7 +929,7 @@ if (error){
 else
 {
   linkv = "https://dashboard.stripe.com/test/payments/" + message;
-  res += 'Payment successful.<br>Payment Id: &nbsp; &nbsp; <a href="' + linkv + '">' + message + '</a>';
+  res += 'Payment completed successfully.<br><br>Payment Id: &nbsp; &nbsp; <a href="' + linkv + '">' + message + '</a>';
 }
 
 res += "<p>";
@@ -995,4 +995,5 @@ var loading = function(isLoading) {
 
 
 </body>
+  
 </html>
