--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -690,14 +690,20 @@ function displayPayment(){
 
   var form = "";
 
+
+
+
+
+
+
+
   form = `
+
+<!-- Display a payment form -->
+
 <form id="payment-form" class="stripe-form">
 
-<div class="form-row">
-<div class="col-md-6 form-group">
 <div id="card-element"></div>
-</div>
-</div>
       
 <button id="payment-form-submit" class="stripe-button">
     <div class="stripe-spinner stripe-hidden" id="payment-form-spinner"></div>
