--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -1093,11 +1093,12 @@ $("#stripe-result-modal").modal({show: true});
 var loading = function(isLoading) {
   if (isLoading) {
     // Disable the button and show a spinner
-    document.querySelector("#payment-form-submit").disabled = true;
+    document.querySelector(".stripe-button").disabled = true;
     document.querySelector("#payment-form-spinner").classList.remove("stripe-hidden");
     document.querySelector("#payment-form-button-text").classList.add("stripe-hidden");
   } else {
-    document.querySelector("#payment-form-submit").disabled = false;
+    // Enable the button and Hide the spinner
+    document.querySelector(".stripe-button").disabled = false;
     document.querySelector("#payment-form-spinner").classList.add("stripe-hidden");
     document.querySelector("#payment-form-button-text").classList.remove("stripe-hidden");
   }
