--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -383,6 +383,13 @@ input {
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
+
+
+<script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.2.0/dist/bootstrap-validate.js" ></script>
+
+
+
+
 <script id="rendered-js">
 
 
@@ -404,7 +411,7 @@ var shoppingCart = function () {
   }
 
 
-  // address = JSON.parse(sessionStorage.getItem('address'))[0];
+
   // Save cart
   function saveCart() {
     sessionStorage.setItem('shoppingCart', JSON.stringify(cart));
@@ -613,22 +620,25 @@ $('.show-cart').on("change", ".item-count", function (event) {
 });
 
 
-
 function displayAddressForm() {
 
   var form = "";
-  form = `<form id="secure-form">
+
+// onsubmit="event.preventDefault(); validateMyForm();"
+form = `<form id="secure-form" class="needs-validation" onsubmit="event.preventDefault();">
+
 <div class="form-row">
 <div class="col-md-6 form-group">
 <label for="firstname">First Name</label>
-<input type="text" class="form-control" id="firstname" placeholder="First Name">
+
+<input type="text" class="form-control" id="firstname" placeholder="First Name" required>
 <div class="invalid-feedback">
 Valid first name is required.
 </div>
 </div>
 <div class="col-md-6 form-group">
 <label for="lastname">Last Name</label>
-<input type="text" class="form-control" id="lastname" placeholder="Last Name">
+<input type="text" class="form-control" id="lastname" placeholder="Last Name" required>
 <div class="invalid-feedback">
 Valid last name is required.
 </div>
@@ -649,12 +659,12 @@ Please enter your shipping address.
 <label for="address2">Address 2
 <span class="text-muted">(Optional)</span>
 </label>
-<input type="text" class="form-control" id="adress2" placeholder="Flat No">
+<input type="text" class="form-control" id="adress2" placeholder="Flat No" required>
 </div>
 <div class="row">
 <div class="col-md-4 form-group">
 <label for="country">Country</label>
-<select type="text" class="form-control" id="country">
+<select type="text" class="form-control" id="country" required>
 <option value>Choose...</option>
 <option>United Kingdom</option>
 </select>
@@ -664,7 +674,7 @@ Please select a valid country.
 </div>
 <div class="col-md-4 form-group">
 <label for="city">City</label>
-<select type="text" class="form-control" id="city">
+<select type="text" class="form-control" id="city" required>
 <option value>Choose...</option>
 <option>London</option>
 </select>
@@ -674,7 +684,7 @@ Please provide a valid city.
 </div>
 <div class="col-md-4 form-group">
 <label for="postcode">Postcode</label>
-<select type="text" class="form-control" id="postcode">
+<select type="text" class="form-control" id="postcode" required>
 <option value>Choose...</option>
 <option>NW6 2LS</option>
 </select>
@@ -684,11 +694,40 @@ Postcode required.
 </div>
 </div>
 <hr>
+
 <div class="form-check">
 <input type="checkbox" class="form-check-input" id="shipping-adress" checked>
-Shipping address is the same as my billing address
-<label for="shipping-adress" class="form-check-label"></label>
+<label for="shipping-adress" class="form-check-label">Shipping address is the same as my billing address</label>
 </div>
+
+<br>
+
+<hr>
+
+<br>
+
+
+
+
+
+<div class="row">
+
+<div class="col-md-6 form-group ">
+<button type="button" class="btn btn-secondary vPrevious float-left"  onclick="vPrevious()" >Back</button>
+
+</div>
+
+<div class="col-md-6 form-group ">
+<button class="btn btn-primary float-right" type="submit" onclick="validateForm()">Next</button> 
+</div>
+
+</div>
+
+
+
+
+
+
 
 </form>
 `
@@ -699,16 +738,27 @@ $('.form-holder').html(form);
 
 
 
+function validateForm() {
+
+  console.log("validateForm clicked...");
+
+  var x = document.getElementById("secure-form");
+
+  if (x.checkValidity() === true)
+  {
+    save_address();
+    hideAllForms();
+    $('.payment-holder').show();
+    $('.vPrevious').show();
+    displayPayment();
+  }
+
+}
+
+
 function displayPayment(){
 
   var form = "";
-
-
-
-
-
-
-
 
   form = `
 
@@ -744,8 +794,12 @@ function displayPayment(){
 function get_address(){
   var address = [];
 
-  address = JSON.parse(sessionStorage.getItem('address'))[0];
+  var content = sessionStorage.getItem('address');
+  console.log(content);
 
+  if(content){
+    address = JSON.parse(content)[0];
+  }
   return address;
 }
 
@@ -808,9 +862,21 @@ function save_address(){
   address.push(key);
   
   console.log("Obj key: ", key);
+
   console.log(address);
   
   sessionStorage.setItem('address', JSON.stringify(address));
+  
+}
+
+
+
+if (state === 1){
+bootstrapValidate('#email', 'email:Enter a valid email address');
+
+}
+
+function checkforms(){
   
 }
 
@@ -828,7 +894,7 @@ function hideAllForms(){
 
 function checkRelevance(){
 
-  if (state == 0){
+  if (state === 0){
     hideAllForms();
     $(".vCart").show();
     $('.next-address').show();
@@ -836,24 +902,23 @@ function checkRelevance(){
 
   }
 
-  if (state == 1){
+  if (state === 1){
     hideAllForms();
     $('.form-holder').show();
-    $('.vPrevious').show();
-    $('.next-address').show();
+    //$('.vPrevious').show();
+    //$('.next-address').show();
     displayAddressForm();
     load_address();
 
   }
 
   // Payment Gateway //
-  if (state == 2){
+  if (state === 2){
     save_address();
     hideAllForms();
     $('.payment-holder').show();
     $('.vPrevious').show();
     displayPayment();
-
   }
 
   // document.getElementById("secure-form").submit();
@@ -880,6 +945,12 @@ $('.next-address').click(function (event) {
   checkRelevance();
 });
 
+
+function vPrevious(){
+  event.preventDefault();
+  state -= 1;
+  checkRelevance();
+}
 
 
 $('.vPrevious').click(function (event) {
