--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -10,7 +10,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-
 <style>
 
 
@@ -649,23 +648,32 @@ Valid last name is required.
 <label for="email">Email</label>
 <input type="email" class="form-control" id="email" placeholder="you@example.com" required>
 </div>
+
+
+<hr>
+<br>
+
+<label for="adress"><b>Billing Address: </b></label>
+<br>
+<br>
+
 <div class="form-group">
-<label for="adress">Address</label>
-<input type="text" class="form-control" id="adress" placeholder="1234 Main Street" required>
+<label for="address">Street Address</label>
+<input type="text" class="form-control" id="bill-address" placeholder="1234 Main Street" required>
 <div class="invalid-feedback">
 Please enter your shipping address.
 </div>
 </div>
 <div class="form-group">
-<label for="address2">Address 2
+<label for="address2">Street Address 2
 <span class="text-muted">(Optional)</span>
 </label>
-<input type="text" class="form-control" id="adress2" placeholder="Flat No" required>
+<input type="text" class="form-control" id="bill-address2" placeholder="Flat No">
 </div>
 <div class="row">
 <div class="col-md-4 form-group">
 <label for="country">Country</label>
-<select type="text" class="form-control" id="country" required>
+<select type="text" class="form-control" id="bill-country" required>
 <option value>Choose...</option>
 <option>United Kingdom</option>
 </select>
@@ -675,7 +683,7 @@ Please select a valid country.
 </div>
 <div class="col-md-4 form-group">
 <label for="city">City</label>
-<select type="text" class="form-control" id="city" required>
+<select type="text" class="form-control" id="bill-city" required>
 <option value>Choose...</option>
 <option>London</option>
 </select>
@@ -685,7 +693,7 @@ Please provide a valid city.
 </div>
 <div class="col-md-4 form-group">
 <label for="postcode">Postcode</label>
-<select type="text" class="form-control" id="postcode" required>
+<select type="text" class="form-control" id="bill-postcode" required>
 <option value>Choose...</option>
 <option>NW6 2LS</option>
 </select>
@@ -694,13 +702,109 @@ Postcode required.
 </div>
 </div>
 </div>
+
+
+
+
 <hr>
+
+<div class="form-check">
+<input type="checkbox" class="form-check-input" id="ship-address-checkbox" onclick="checkedStatus()" checked>
+<label for="shipping-adress" class="form-check-label">Shipping address is the same as my billing address</label>
+</div>
+
+<hr>
+<br>
+
+ 
+<div id="ship-address-group" class="ship-address-group">
+
+
+<label for="adress"><b>Shipping Address: </b></label>
+<span class="text-muted">(Optional)</span>
+<br>
+<br>
+
+<div class="form-group">
+<label for="address">Street Address</label>
+<input type="text" class="form-control" id="ship-address" placeholder="1234 Main Street" >
+<div class="invalid-feedback">
+Please enter your shipping address.
+</div>
+</div>
+<div class="form-group">
+<label for="address2">Street Address 2
+<span class="text-muted">(Optional)</span>
+</label>
+<input type="text" class="form-control" id="ship-address2" placeholder="Flat No">
+</div>
+<div class="row">
+<div class="col-md-4 form-group">
+<label for="country">Country</label>
+<select type="text" class="form-control" id="ship-country" >
+<option value>Choose...</option>
+<option>United Kingdom</option>
+</select>
+<div class="invalid-feedback">
+Please select a valid country.
+</div>
+</div>
+<div class="col-md-4 form-group">
+<label for="city">City</label>
+<select type="text" class="form-control" id="ship-city" >
+<option value>Choose...</option>
+<option>London</option>
+</select>
+<div class="invalid-feedback">
+Please provide a valid city.
+</div>
+</div>
+<div class="col-md-4 form-group">
+<label for="postcode">Postcode</label>
+<select type="text" class="form-control" id="ship-postcode" >
+<option value>Choose...</option>
+<option>NW6 2LS</option>
+</select>
+<div class="invalid-feedback">
+Postcode required.
+</div>
+</div>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <br>
 
 <hr>
 
 <br>
+
+
 
 
 
@@ -865,16 +969,6 @@ function save_address(){
 
 
 
-if (state === 1){
-bootstrapValidate('#email', 'email:Enter a valid email address');
-
-}
-
-function checkforms(){
-  
-}
-
-
 
 function hideAllForms(){
   $('.payment-holder').hide();
@@ -886,6 +980,23 @@ function hideAllForms(){
 
 
 
+/// ship-address-checkbox ///
+
+function checkedStatus()
+{
+
+  if( $('#ship-address-checkbox').is(":checked") === true)
+  {
+    // ship-address-group
+    document.querySelector("#ship-address-group").classList.remove("stripe-hidden");
+  }
+  else{
+    document.querySelector("#ship-address-group").classList.add("stripe-hidden");
+  }
+
+}
+
+
 function checkRelevance(){
 
   if (state === 0){
@@ -893,7 +1004,6 @@ function checkRelevance(){
     $(".vCart").show();
     $('.next-address').show();
     displayCart();
-
   }
 
   if (state === 1){
@@ -903,7 +1013,7 @@ function checkRelevance(){
     //$('.next-address').show();
     displayAddressForm();
     load_address();
-
+    checkboxState();
   }
 
   // Payment Gateway //
@@ -930,6 +1040,11 @@ $( document ).ready(function() {
   state = 0;
   checkRelevance();
 });
+
+
+
+
+
 
 
 
