--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -1013,7 +1013,7 @@ function checkRelevance(){
     //$('.next-address').show();
     displayAddressForm();
     load_address();
-    checkboxState();
+    checkedStatus();
   }
 
   // Payment Gateway //
