--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,32 @@
     Simple button that will open the modal.
   -->
   <div data-netlify-identity-button>Login with Netlify Identity</div>
+  
+  
+  <script>
+// Open the modal
+netlifyIdentity.open();
+
+// Change language
+netlifyIdentity.setLocale('en');
+
+// Get the current user:
+const user = netlifyIdentity.currentUser();
+
+// Bind to events
+netlifyIdentity.on('init', user => console.log('init', user));
+netlifyIdentity.on('login', user => console.log('login', user));
+netlifyIdentity.on('logout', () => console.log('Logged out'));
+netlifyIdentity.on('error', err => console.error('Error', err));
+netlifyIdentity.on('open', () => console.log('Widget opened'));
+netlifyIdentity.on('close', () => console.log('Widget closed'));
+
+// refresh the user's JWT
+netlifyIdentity.refresh().then((jwt)=>console.log(jwt))
+
+
+</script>
+  
+  
 </body>
 </html>
