--- a/public/index.html
+++ b/public/index.html
@@ -1431,6 +1431,9 @@ netlifyIdentity.refresh().then((jwt)=>console.log(jwt));
 // Change language
 //netlifyIdentity.setLocale('en');
 
+// modalContainer
+var md = document.querySelector(".modalContainer").classList.add("visuallyHidden");
+
 
 
 </script>
