--- a/public/index.html
+++ b/public/index.html
@@ -1073,7 +1073,7 @@ Please enter your billing address.
 
 <div class="col-md-6 form-group">
 <label for="city">City</label>
-<input type="text" class="form-control" id="ship-city" placeholder="City" required>
+<input type="text" class="form-control" id="ship-city" placeholder="City">
 <div class="invalid-feedback">
 Please provide a valid city.
 </div>
@@ -1081,7 +1081,7 @@ Please provide a valid city.
 
 <div class="col-md-6 form-group">
 <label for="postcode">Postcode</label>
-<input type="text" class="form-control" id="ship-postcode" placeholder="Postcode" required>
+<input type="text" class="form-control" id="ship-postcode" placeholder="Postcode">
 <div class="invalid-feedback">
 Postcode required.
 </div>
@@ -1098,7 +1098,7 @@ Postcode required.
 <div class="col-md-4 form-group">
 
 <label for="country">Country</label>
-<select type="text" class="form-control" id="ship-country" required>
+<select type="text" class="form-control" id="ship-country">
 <option value>Choose...</option>
 <option value="Afganistan">Afghanistan</option>
    <option value="Albania">Albania</option>
@@ -1366,25 +1366,6 @@ Please select a valid country.
 <hr>
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
