--- a/public/index.html
+++ b/public/index.html
@@ -1933,10 +1933,13 @@ window.onload = alterMenu;
 function loginNetlifyIdentity(user) {
 
   netlifyIdentity.refresh().then((jwt)=>console.log(jwt));
+
+  const vv = netlifyIdentity.currentUser();
+
+  var userEmail = vv.email;
   
-  console.log("User: ", user);
   console.log(user);
-  console.log(user.e.email);
+
 }
 
 
@@ -1972,6 +1975,41 @@ netlifyIdentity.close();
 
 
 
+
+
+
+
+
+
+
+
+
+
+////// Stripe Query
+
+// https://api.stripe.com/v1/search?query=vinayak.patel@grynn.in&prefix=false
+
+
+fetch("https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/queryStripe", {
+
+  method: "POST",
+
+  headers: {
+    "Content-Type": "application/json"
+  },
+
+  body: JSON.stringify("")
+
+})
+  .then(function(result) {
+    return result.json();
+  })
+  .then(function(data) {
+
+    console.log("Query: ", data);   
+
+  }
+);
 
 </script>
 
